--- a/css/styles.css
+++ b/css/styles.css
@@ -48,12 +48,12 @@ img {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
-  outline: 1px solid red;
 }
 
 .header {
   padding-top: 24px;
   padding-bottom: 25px;
+  border: 1px solid #ececec;
 }
 
 .header .container {
@@ -140,7 +140,7 @@ img {
 
 .hero {
   background-color: var(--darck-background-color);
-  padding: 200px 452px 200px 452px;
+  padding: 200px 452px;
 }
 
 .hero-title {
@@ -151,8 +151,11 @@ img {
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
+
   width: 696px;
   margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .button {
@@ -164,11 +167,15 @@ img {
   font-size: 16px;
   line-height: 1.9;
   letter-spacing: 0.06em;
+
   cursor: pointer;
   padding: 10px 32px;
+  border: 1px solid transparent;
   border-radius: 4px;
   min-width: 200px;
   height: 50px;
+  display: block;
+  margin: 0 auto;
 }
 
 .button:hover,
@@ -176,7 +183,7 @@ img {
   background-color: var(--secondary-accent-color);
 }
 
-/* ----------Sections---------- */
+/* ----------Feature-Section---------- */
 
 .feature {
   padding-top: 94px;
@@ -188,7 +195,20 @@ img {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
+  margin-bottom: 10px;
 }
+
+.feature-list {
+  display: flex;
+  margin-left: -30px;
+}
+
+.feature-item {
+  flex-basis: calc((100% - 120px) / 4);
+  margin-left: 30px;
+}
+
+/* ----------Sections---------- */
 
 .sections {
   padding-top: 94px;
@@ -205,10 +225,32 @@ img {
   margin-bottom: 50px;
 }
 
+.about-list {
+  display: flex;
+  margin-left: -30px;
+}
+
+.about-item {
+  flex-basis: calc((100% - 90px) / 3);
+  margin-left: 30px;
+}
+
+/*--------------Staff-Section----------------*/
+
 .staff {
   background-color: var(--secondary-background-color);
   padding-top: 94px;
   padding-bottom: 94px;
+}
+
+.staff-list {
+  display: flex;
+  margin-left: -30px;
+}
+
+.staff-item {
+  flex-basis: calc((100% - 120px) / 4);
+  margin-left: 30px;
 }
 
 .staff-title {
@@ -218,23 +260,29 @@ img {
   font-size: 16px;
   line-height: 1.2;
   text-align: center;
+  padding-top: 30px;
   margin-bottom: 10px;
-}
-
-.staff-img {
-  margin-bottom: 30px;
 }
 
 .staff-position {
   font-size: 16px;
   line-height: 1.2;
   text-align: center;
+  padding-bottom: 30px;
+}
+
+.position-item {
+  background: #ffffff;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 /* ----------Footer---------- */
 
 .footer {
   background-color: var(--darck-background-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .logo {
@@ -248,6 +296,14 @@ img {
 }
 .footer .accent {
   color: var(--primary-white-color);
+}
+
+.footer-list {
+  margin-top: 20px;
+}
+
+.footer-item:not(:last-child) {
+  margin-bottom: 9px;
 }
 
 .address {
@@ -282,6 +338,16 @@ img {
   margin: -1px;
 }
 
+.btn-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.btn-item {
+  margin-right: 8px;
+}
+
 .list-button {
   color: var(--title-text-color);
   background-color: var(--secondary-background-color);
@@ -291,12 +357,20 @@ img {
   font-size: 16px;
   line-height: 1.6;
   cursor: pointer;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  padding: 6px 22px;
 }
 
 .list-button:hover,
 .list-button:focus {
   color: var(--primary-white-color);
   background-color: var(--primary-accent-color);
+}
+
+.section-portfolio {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .section-portfolio .link {
@@ -317,4 +391,24 @@ img {
 
   font-size: 16px;
   line-height: 1.9;
+}
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-bottom: -30px;
+}
+
+.portfolio-item {
+  flex-basis: calc((100% - 90px) / 3);
+  margin-left: 30px;
+  margin-bottom: 30px;
+}
+
+.image-item {
+  padding: 20px 24px;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
 }
