--- a/css/styles.css
+++ b/css/styles.css
@@ -51,9 +51,7 @@ img {
 }
 
 .header {
-  padding-top: 24px;
-  padding-bottom: 25px;
-  border: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
 }
 
 .header .container {
@@ -93,6 +91,8 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+  display: block;
+  padding: 32px 0px;
 }
 .site-nav .link:hover,
 .site-nav .link:focus {
@@ -111,9 +111,6 @@ img {
 
 .auth-nav {
   display: flex;
-}
-
-.header-contact {
   margin-left: auto;
 }
 
@@ -140,7 +137,7 @@ img {
 
 .hero {
   background-color: var(--darck-background-color);
-  padding: 200px 452px;
+  padding: 200px 0px;
 }
 
 .hero-title {
@@ -260,7 +257,7 @@ img {
   font-size: 16px;
   line-height: 1.2;
   text-align: center;
-  padding-top: 30px;
+
   margin-bottom: 10px;
 }
 
@@ -268,11 +265,12 @@ img {
   font-size: 16px;
   line-height: 1.2;
   text-align: center;
-  padding-bottom: 30px;
 }
 
 .position-item {
   background: #ffffff;
+  padding-top: 30px;
+  padding-bottom: 30px;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
 }
@@ -344,7 +342,7 @@ img {
   margin-bottom: 50px;
 }
 
-.btn-item {
+.btn-item:not(:last-child) {
   margin-right: 8px;
 }
 
@@ -384,6 +382,7 @@ img {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  margin-bottom: 4px;
 }
 
 .portfolio-text {
